--- a/.github/workflows/image_update.yaml
+++ b/.github/workflows/image_update.yaml
@@ -12,13 +12,13 @@ on:
 
 jobs:
 
-  Testing the Application:
-    name: Testing the Application
+  Testing:
+
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout Code
-    - uses: actions/checkout@v4
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v5
@@ -31,11 +31,11 @@ jobs:
     - name: Test with pytest
       run: python3 -m pytest
 
-  Building Dcoker Image:
+  Building:
     name: Updating Docker Image
     runs-on: ubuntu-latest
 
-    needs: Testing the Application
+    needs: Testing
 
     env:
       REPOSITORY: grad_project # Define Dockerhub repo here
