--- a/.github/workflows/image_update.yaml
+++ b/.github/workflows/image_update.yaml
@@ -26,7 +26,7 @@ jobs:
         python-version: '3.10.12'
 
     - name: Install dependencies
-      run: pip install -r --no-cache-dir requirments.txt
+      run: pip install --no-cache-dir -r  requirments.txt
 
     - name: Test with pytest
       run: python3 -m pytest
