Modified image_update.yaml  Accesing test files

--- a/.github/workflows/image_update.yaml
+++ b/.github/workflows/image_update.yaml
@@ -27,6 +27,9 @@ jobs:
 
     - name: Install dependencies
       run: pip install --no-cache-dir -r  requirments.txt
+      
+    - name: Enter Test
+      run: cd app
 
     - name: Test with pytest
       run: python3 -m pytest
