--- a/.github/workflows/image_update.yaml
+++ b/.github/workflows/image_update.yaml
@@ -27,12 +27,11 @@ jobs:
 
     - name: Install dependencies
       run: pip install --no-cache-dir -r  requirments.txt
-      
-    - name: Enter Test
-      run: cd app
-
+    
     - name: Test with pytest
-      run: python3 -m pytest
+      run: |
+        cd app
+        python3 -m pytest
 
   Building:
     name: Updating Docker Image
